[package]
name = "cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.28.2"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }